@@ -142,8 +142,22 @@ typedef std::vector<ServerInfoPtr> ServerInfoList;
 
 class SocketManager {
 public:
+	typedef std::tr1::function<void()> Callback;
+	%extend {
+		/* work around 2 problems:
+		- SWIG fails to convert a script function to const Callback&.
+		- SWIG has trouble choosing the overload of addJob to use.
+		*/
+		void addJob(const long usec, Callback callback) {
+			self->addJob(usec, callback);
+		}
+		void addJob_str(const std::string& time, Callback callback) {
+			self->addJob(time, callback);
+		}
+	}
+
 	void setServers(const ServerInfoList& servers_);
-	
+
 	std::map<std::string, int> errors;
 };
 
