@@ -11,6 +11,7 @@
 * [L#502280] Fix Windows service
 * Accept relative paths in config files
 * [L#518972] Fix python memory leak
+* Plugins can use timers (see SocketManager::addJob)
 
 -- 2.4 2008-10-02 --
 * Improve Lua scripts
